# weather-wand

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  clippy.yml  test.yml
src/: errors.rs  main.rs
src/config/: args.rs  mod.rs
src/config/files/: config.json
src/geolocation/: mod.rs
src/geolocation/api/: mod.rs  response_handler.rs
src/geolocation/geo_api/: mod.rs  response_handler.rs
src/output/: mod.rs
src/updater/: mod.rs
src/weather/: mod.rs
src/weather/api/: mod.rs  response_handler.rs
src/weather/weather_api/: mod.rs  response_handler.rs
