[package]
name = "weather-wand"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.105"
serde = { version = "^1.0", features = ["derive"] }

reqwest = { version = "0.11.20", features = ["blocking", "json"] }
tokio = { version = "1.32.0", features = ["full"] }

clap = { version = "4.4.2", features = ["derive"] } 
colored = "2.0.4"
